--- a/Web.Statu/Views/Sponzori/Top.cshtml
+++ b/Web.Statu/Views/Sponzori/Top.cshtml
@@ -6,25 +6,29 @@
 @using HlidacStatu.Web.Framework
 
 @{
-    ViewBag.Title = "Největší sponzoři politických stran";
-    ViewBag.SubTitle = "za posledních 10 let";
+    int rok = ViewBag.Rok;
 
+    ViewBag.Title = "Největší sponzoři politických stran";
+    ViewBag.SubTitle =  rok == 0 ? "za posledních 10 let" : "v roce " + rok;
     HlidacStatu.Lib.Data.Osoba topOsoba = ViewBag.TopOsoba;
 
     ViewBag.SocialShareTitle = "Největší sponzoři politických stran";
-    ViewBag.SocialShareText = "Více než 2000 osoby a firem, které politickým stranám, hnutím a kandidátům darovali za posledních 10 let v souhrnu alespoň 100.000 Kč.";
+    ViewBag.SocialShareText = rok == 0 ? 
+        "Více než 2000 osob a firem, které politickým stranám, hnutím a kandidátům darovali za posledních 10 let v souhrnu alespoň 100.000 Kč."
+        : $"Osoby a firmy, které politickým stranám, hnutím a kandidátům darovali v roce {rok} v souhrnu alespoň 100.000 Kč.";
+
     ViewBag.SocialImage = $"https://www.hlidacstatu.cz/socialbanner/quote?d={DateTime.Now.ToString("d.M.yy")}"
             + "&t=" + System.Net.WebUtility.UrlEncode(ViewBag.SocialShareTitle)
             + "&b=" + System.Net.WebUtility.UrlEncode(ViewBag.SocialShareText)
-            + "&f=" + System.Net.WebUtility.UrlEncode(topOsoba.FullNameWithYear() + " " + HlidacStatu.Util.RenderData.ShortNicePrice(ViewBag.TopOsobaAmount))
+            + topOsoba != null ? "&f=" + System.Net.WebUtility.UrlEncode(topOsoba.FullNameWithYear() + " " + HlidacStatu.Util.RenderData.ShortNicePrice(ViewBag.TopOsobaAmount)) : ""
             + "&st=" + System.Net.WebUtility.UrlEncode("k " + DateTime.Now.Date.ToString("dd.MM.yyyy"))
-            + "&img=" + System.Net.WebUtility.UrlEncode(topOsoba.GetPhotoUrl())
+            + topOsoba != null ? "&img=" + System.Net.WebUtility.UrlEncode(topOsoba.GetPhotoUrl()) : ""
             + "&rat=16x9"
             ;
     ViewBag.OpenGraphMore = "<meta property=\"og:image:width\" content=\"1920\" />\n"
-+ "<meta property=\"og:image:height\" content=\"1080\" />"
-+ "<meta property=\"og:image:type\" content=\"image/png\" />"
-;
+    + "<meta property=\"og:image:height\" content=\"1080\" />"
+    + "<meta property=\"og:image:type\" content=\"image/png\" />"
+    ;
 
     ViewBag.ShowBookmarkUrl = true;
 
@@ -32,8 +36,8 @@
     Devmasters.Cache.V20.LocalMemory.LocalMemoryCache<string> content =
         new Devmasters.Cache.V20.LocalMemory.LocalMemoryCache<string>(
             TimeSpan.FromDays(2),
-            "/sponzori/top",
-        (p) => Html.Action("Action_Child", new { model = Model, NameOfView = "Top_Child" }).ToHtmlString()
+            "/sponzori/top?rok=" + (rok == 0 ? "" : rok.ToString()),
+        (p) => Html.Action("Action_Child", new { model = Model, rok = ViewBag.Rok, NameOfView = "Top_Child" }).ToHtmlString()
         );
 
 }
@@ -54,7 +58,33 @@
 }
 
 
-<h3>Osoby a firmy sponzorující politické strany celkovou částkou vyšší než 100.000 Kč.</h3>
+<h3>Osoby a firmy sponzorující politické strany celkovou částkou vyšší než 100.000 Kč
+    @Util.IfExists(rok != 0, " v roce " + rok, " souhrnně za posledních 10 let")
+    </h3>
+<div style="margin-top:20px;margin-bottom:40px;">
+    <ul class="list-inline">
+        @if (rok != 0)
+        {
+            <li><a href="top">Souhrnně za 10 let</a></li>
+        }
+        else
+        {
+            <li><b>Souhrnně za 10 let</b></li>
+        }
+        @for (int i = HlidacStatu.Lib.Data.Sponsors.DefaultLastSponzoringYear - 10; i < HlidacStatu.Lib.Data.Sponsors.DefaultLastSponzoringYear; i++)
+        {
+            if (rok == i)
+            {
+                <li><b>@i</b></li>
+            }
+            else
+            {
+                <li><a href="top?rok=@i">@(i)</a></li>
+            }
+        }
+    </ul>
+</div>
+
 
 @Html.Raw(content.Get())
 
