--- a/Web.Statu/Views/Ucty/Ucet.cshtml
+++ b/Web.Statu/Views/Ucty/Ucet.cshtml
@@ -20,7 +20,7 @@
 
     }
 
-    var sponzori = HlidacStatu.Lib.Data.Sponsors.Strany.PerYears(bu.Subjekt);
+    var sponzori = HlidacStatu.Lib.Data.Sponsors.Strany.StranaPerYears(bu.Subjekt);
 
 
 }
