--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -229,11 +229,11 @@
             <ul>
                 <li class="navbar__watchers">
                     <a href="/smlouvy">Smluvy</a>
-                    <a href="/osoby">Osoby</a>
                     <a href="/sponzori">Sponzoři</a>
+                    <a href="/ucty">Účty stran</a>
                     <a href="/VerejneZakazky">Veřejné zakázky</a>
                     @*<a href="/Insolvence">Insolvence</a>*@
-                    <a href="/StatniWeby">Weby</a>
+                    <a href="/StatniWeby">Weby státu</a>
                 </li>
 
                 <li class="hidden-sm hidden-xs">
