--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -228,7 +228,7 @@
 
             <ul>
                 <li class="navbar__watchers">
-                    <a href="/smlouvy">Smluvy</a>
+                    <a href="/smlouvy">Smlouvy</a>
                     <a href="/sponzori">Sponzoři</a>
                     <a href="/ucty">Účty stran</a>
                     <a href="/VerejneZakazky">Veřejné zakázky</a>
