--- a/Web.Statu/Views/Home/Detail_Child.cshtml
+++ b/Web.Statu/Views/Home/Detail_Child.cshtml
@@ -243,7 +243,7 @@
                     </td>
                     <td>
                         <div>
-                            Nalezli jsme @(Devmasters.Core.Lang.Plural.Get(Model.OtherVersions().Length, "jednu provázanou smlouvu", "{0} provázané smluvy", "{0} provázaných smluv")):
+                            Nalezli jsme @(Devmasters.Core.Lang.Plural.Get(Model.OtherVersions().Length, "jednu provázanou smlouvu", "{0} provázané smlouvy", "{0} provázaných smluv")):
                             <ul>
                                 @foreach (var os in Model.OtherVersions())
                                 {
@@ -264,7 +264,7 @@
                     </td>
                     <td>
                         <div>
-                            Nalezli jsme @(Devmasters.Core.Lang.Plural.Get(Model.PodobneSmlouvy().Length, "jednu podobnou smlouvu", "{0} podobné smluvy", "{0} podobných smluv")):
+                            Nalezli jsme @(Devmasters.Core.Lang.Plural.Get(Model.PodobneSmlouvy().Length, "jednu podobnou smlouvu", "{0} podobné smlouvy", "{0} podobných smluv")):
                             <ul>
                                 @foreach (var os in Model.PodobneSmlouvy())
                                 {
