--- a/Web.Statu/Views/Data/DetailText.cshtml
+++ b/Web.Statu/Views/Data/DetailText.cshtml
@@ -60,7 +60,7 @@
     <hr />
     <div class="row">
         <div class="col-xs-12">
-            <pre style="overflow-x: auto;white-space: pre-wrap;white-space: -moz-pre-wrap;white-space: -pre-wrap;white-space: -o-pre-wrap;sword-wrap: break-word;">
+            <pre style="overflow-x: auto;white-space: pre-wrap;white-space: -moz-pre-wrap;white-space: -pre-wrap;white-space: -o-pre-wrap;word-wrap: break-word;">
                 @Html.Raw(plainText)
             </pre>
         </div>
