--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -437,7 +437,7 @@
                 <p>
                     Informace o dostupnosti a funkčnosti státních webů
                     <br>
-                    Hlídáme <strong>@ZabTools.Weby()?.Count()</strong> státních webů
+                    Hlídáme <strong>@(ZabTools.Weby()?.Count())</strong> státních webů
                 </p>
             </div>
 
