--- a/Web.Statu/Views/Insolvence/Rizeni.cshtml
+++ b/Web.Statu/Views/Insolvence/Rizeni.cshtml
@@ -162,7 +162,7 @@ else
                         }
                         else
                         {
-                            docs.Add(doc, HlidacStatu.Web.Framework.Highlighter.HasHighlightedContent(highlightingData, "dokumenty.plainText", doc.PlainText) ? "1" : "0");
+                            docs.Add(doc, HlidacStatu.Lib.ES.Highlighter.HasHighlightedContent(highlightingData, "dokumenty.plainText", doc.PlainText) ? "1" : "0");
                         }
                     }
 
