--- a/Lib/Emails/Templates/FoundZakazky.Html.cshtml
+++ b/Lib/Emails/Templates/FoundZakazky.Html.cshtml
@@ -79,7 +79,7 @@
     @if (Model.AddResults > 0)
     {
         <p>Zobrazujeme prvních 30 zakázek, ale nalezli jsme celkem @Model.TotalTxt.<br /> 
-        Zde můžete <a href="https://www.hlidacstatu.cz/VerejneZakazky/Hledat?Q=@Raw(Model.SpecificQuery)&utm_source=hlidac&utm_medium=emailtxt&utm_campaign=more">zobrazit všechny nalezené zakázky</a>
+        Zde můžete <a href="https://www.hlidacstatu.cz/VerejneZakazky/Hledat?Q=@(Raw(System.Web.HttpUtility.UrlEncode(Model.SpecificQuery)))&utm_source=hlidac&utm_medium=emailtxt&utm_campaign=more">zobrazit všechny nalezené zakázky</a>
         </p>
     }
 
