--- a/Web.Statu/Views/Home/Osoba.cshtml
+++ b/Web.Statu/Views/Home/Osoba.cshtml
@@ -42,7 +42,7 @@
     </ol>
 }
 
-@Html.Action("Osoba_child", new { model = Model, auth=this.User.Identity.IsAuthenticated, aktualnost = aktualnost, NameOfView = "OsobaProfil" + (string.IsNullOrEmpty(Request.QueryString["beta"]) ? "" : "2") })
+@Html.Action("Osoba_child", new { model = Model, auth = this.User.Identity.IsAuthenticated, aktualnost = aktualnost, NameOfView = "OsobaProfil" }) @*+ (string.IsNullOrEmpty(Request.QueryString["beta"]) ? "" : "2")*@
 
 <div style="margin-top:40px"></div>
 
